# TestAICoding

./: CMakeLists.txt  README.md  generate_python_reference.py  monod_bindings.cpp  monod_bioreaction.py  monod_model.cpp  monod_model.hpp  setup.py  test_monod_cpp_main.cpp
.github/workflows/: build-artifacts.yml
notebooks/: monod_colab_tutorial.ipynb
results/: README.md  monod_python_results.tsv  monod_test_results.csv  monod_test_results.tsv
